# Microscope

./: .gitignore  CMakeLists.txt  Makefile  Microscope.ioc
BApp/: MovementController.hpp  UScope.hpp  main_App.cpp
Core/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tim.h
Core/Src/: gpio.c  main.c  stm32g4xx_it.c  tim.c
Drivers/STM32G4xx_HAL_Driver/Inc/: stm32g4xx_hal.h
HW/IO/: Button.hpp  PIN.hpp
HW/StepperMotor/: StepperMotor.hpp
cmake/: toolchain.cmake
